<resources>
    <string name="app_name">Ferris Wheel</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="data">My Details</string>
    <string name="welcome">Welcome to Ferris Wheel. The anonymous chat app that matches you with a random person.</string>
    <string name="cont">Continue</string>
    <string name="policy"><![CDATA[Data & Privacy Policy]]></string>
    <string name="account_notice">Please note that this information is only used for matching users. Your match will not see this information until you both press reveal in the chat settings in future versions.</string>
    <string name="account_gender">Gender:</string>
    <string name="account_chat">Chatting with:</string>
    <string name="age">Age</string>
    <string name="relationship">Relationship status:</string>
    <string name="logout">Sign Out</string>
    <string name="phone">Phone number (inc. dialling prefix)</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_text">Before continuing you are required to verify your email address and then sign back into the app.</string>
    <string name="i_ve_verified">I\'ve verified, show the sign in screen</string>
    <string name="resend">I cannot find the email. Please resend</string>
    <string name="message">Message...</string>
</resources>
