<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/aNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_bg"
        android:fontFamily="sans-serif-light"
        android:ems="10"
        android:hint="@string/fui_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atextView" />

    <TextView
        android:id="@+id/atextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_notice"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/aGSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_bg"
        android:entries="@array/gender"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/aHintView"
        app:layout_constraintTop_toBottomOf="@+id/aNameText" />

    <TextView
        android:id="@+id/aHintView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/account_gender"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/aGSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aNameText" />

    <TextView
        android:id="@+id/aLHintView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/account_chat"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/aCSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aHintView" />

    <Spinner
        android:id="@+id/aCSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_bg"
        android:entries="@array/orientation"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/aLHintView"
        app:layout_constraintTop_toBottomOf="@+id/aGSpinner" />

    <Spinner
        android:id="@+id/aRSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/relationship"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/text_bg"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/aCSpinner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/relationship"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/aRSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aLHintView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/aSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fui_button_text_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="16dp"
        app:rippleColor="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        app:icon="@drawable/ic_save_black_24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/aSignOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif-light"
        app:cornerRadius="16dp"
        app:rippleColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/aPhoneText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aRSpinner" />

    <com.google.android.material.chip.Chip
        android:id="@+id/aChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Account data saved successfully"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aPhoneText" />


</androidx.constraintlayout.widget.ConstraintLayout>